@startuml wall_dynamics
' ------------------------------------------------------------------
' Base Abstract Class: Wall
' ------------------------------------------------------------------
abstract class "Wall<Real>" as Wall {
    ' Protected Members
    # _dt : Real
    # _min_gap : Real = 1e-5
    # _min_inner_radius : Real = 1e-5
    # _time_step : size_t = 0
    # _spatial_grid_size : size_t = 0
    
    ' Data Structures (Vectors)
    # _center_coords_out : sctl::Vector<Real>
    # _center_coords_in : sctl::Vector<Real>
    # _radius_out : sctl::Vector<Real>
    # _radius_in : sctl::Vector<Real>
    # _rdot_out : sctl::Vector<Real>
    # _rdot_in : sctl::Vector<Real>
    # _cdot_out : sctl::Vector<Real>
    # _cdot_in : sctl::Vector<Real>

    ' Constructor & Destructor
    + Wall(dt: Real, \n\
      center_out: Vector<Real>, center_in: Vector<Real>,\n\
      radius_out: Vector<Real>, radius_in: Vector<Real>)
    + {abstract} ~Wall()

    ' Abstract Methods
    + {abstract} update() : void

    ' Concrete Methods
    + enforceGapGeometry() : void
    + setGridAndData(center_out: Vector<Real>, center_in: Vector<Real>,\n\
      radius_out: Vector<Real>, radius_in: Vector<Real>,\n\
      rdot_out: Vector<Real>, rdot_in: Vector<Real>) : void

    ' Accessors / Getters
    + incrementTimeStep() : void
    + getTimeStep() : size_t
    + getTime() : Real
    + centerCoordsOut() : const sctl::Vector<Real>&
    + centerCoordsIn() : const sctl::Vector<Real>&
    + cdotOut() : const sctl::Vector<Real>&
    + cdotIn() : const sctl::Vector<Real>&
    + radiusOut() : const sctl::Vector<Real>&
    + radiusIn() : const sctl::Vector<Real>&
    + rdotOut() : const sctl::Vector<Real>&
    + rdotIn() : const sctl::Vector<Real>&
}

' ------------------------------------------------------------------
' Derived Class: FuncWall
' ------------------------------------------------------------------
class "FuncWall<Real, InnerFunc, OuterFunc>" as FuncWall {
    ' Private Members
    - _inner_func : InnerFunc
    - _outer_func : OuterFunc

    ' Constructor & Destructor
    + FuncWall(dt: Real, \n\
      center_out: Vector<Real>, center_in: Vector<Real>, \n\
      radius_out: Vector<Real>, radius_in: Vector<Real>,\n\
      inner_func: InnerFunc, outer_func: OuterFunc)
    + ~FuncWall()

    ' Overrides
    + update() : void
}

' ------------------------------------------------------------------
' Derived Class: IntegratorWall
' ------------------------------------------------------------------
class "IntegratorWall<Real, NonLinearFuncV, NonLinearFuncG, InnerFunc, OuterFunc>" as IntegratorWall {
    ' Private Members
    - _neuronal_activity : sctl::Vector<Real>
    - _V : sctl::Vector<Real>
    - _G : sctl::Vector<Real>
    - _tau_V : Real
    - _tau_G : Real
    - _FV : NonLinearFuncV
    - _FG : NonLinearFuncG
    - _inner_func : InnerFunc
    - _outer_func : OuterFunc

    ' Constructor & Destructor
    + IntegratorWall(dt: Real, \n\
      center_out: Vector<Real>, center_in: Vector<Real>, \n\
      radius_out: Vector<Real>, radius_in: Vector<Real>, \n\
      neuronal_activity: Vector<Real>, V: Vector<Real>, G: Vector<Real>, \n\
      tau_V: Real, tau_G: Real, \n\
      FV: NonLinearFuncV, FG: NonLinearFuncG, \n\
      inner_func: InnerFunc, outer_func: OuterFunc)
    + ~IntegratorWall()

    ' Overrides
    + update() : void

    ' Class Specific Methods
    + expIntStep() : void
    + getNeuronalActivity() : const sctl::Vector<Real>&
    + getNeuronalActivity() : sctl::Vector<Real>&
}

' ------------------------------------------------------------------
' Relationships
' ------------------------------------------------------------------
Wall <|-- FuncWall
Wall <|-- IntegratorWall
@enduml